@@ -6,6 +6,9 @@ MIDIboxSID V2.044
    o envelopes are now released properly when a note is played via the SysEx editor
      (or with the PLAY button)
 
+   o implemented special encoder testmode which can be enabled with
+     DEFAULT_TESTMODE_ENC_SPEED in the setup_*.asm file
+
 
 MIDIboxSID V2.043
 ~~~~~~~~~~~~~~~~~
